environments/gloo-gateway/gateway-api/live/tiered-app-config-gwapi/base/virtualservice.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tiered-app
  namespace: istio-system
  labels:
    seed: "1696442875193501000"
spec:
  hosts:
    - "tiered-app.ambient.gmc.glooplatform.com"
  gateways:
  - istio-system/https-gateway
  http:
  - name: "ns-1"
    match:
    - uri:
        prefix: "/ns-1"
    route:
    - destination:
        host: restless-sky.ns-1.svc.cluster.local
        port:
          number: 8080
  - name: "ns-2"
    match:
    - uri:
        prefix: "/ns-2"
    route:
    - destination:
        host: throbbing-field.ns-2.svc.cluster.local
        port:
          number: 8080
  - name: "ns-3"
    match:
    - uri:
        prefix: "/ns-3"
    route:
    - destination:
        host: hidden-sky.ns-3.svc.cluster.local
        port:
          number: 8080
  - name: "ns-4"
    match:
    - uri:
        prefix: "/ns-4"
    route:
    - destination:
        host: blue-hill.ns-4.svc.cluster.local
        port:
          number: 8080
  #- name: "ns-5"
  #  match:
  #  - uri:
  #      prefix: "/ns-5"
  #  route:
  #  - destination:
  #      host: winter-field.ns-5.svc.cluster.local
  #      port:
  #        number: 8080
